Convert to Cliqq

--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -13,12 +13,12 @@
     </div><div class="right">
       <h2 class="vue">Tooltwist</h2>
       <h1>
-        <b>Loginservice</b><br>
-        A Tooltwist Component
+        <b>Cliqq</b><br>
+        From Apollo
       </h1>
       <p>
         <a class="button" href="http://tooltwist.com" target="_blank">
-          WHY TOOLTWIST?</a>
+          WHY Cliqq?</a>
         <a class="button white" href="<%- url_for("/v2/guide/") %>">GET STARTED</a>
         <a class="button gray has-icon" href="https://github.com/tooltwist/vue-loginservice" target="_blank">
           <%- partial('icons/github-dark') %>
